<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_settings">Settings</string>

    <string name="let_s_get_started">Let\'s get started</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_chat">new chat</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
    <string name="user_image">user_image</string>
    <string name="change_image">change image</string>
    <string name="change_status">change status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="title_chat">Chat</string>
    <string name="title_users">Users</string>
    <string name="title_profile">Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="request_sent">request sent</string>
    <string name="accept_friend_request">accept friend request</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="menu_users">Users</string>
    <string name="default_status">No Status</string>
</resources>