<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_start">

    <fragment
        android:id="@+id/nav_start"
        android:name="com.example.myapplication.ui.start.StartFragment"
        android:label="Start"
        tools:layout="@layout/fragment_start">

        <action
            android:id="@+id/action_start_to_new_account"
            app:destination="@+id/nav_new_account"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"/>
        <action
            android:id="@+id/action_start_to_login"
            app:destination="@+id/nav_login"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"/>
        <action
            android:id="@+id/action_start_to_chats"
            app:destination="@+id/nav_chats"
            app:launchSingleTop="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_new_account"
        android:name="com.example.myapplication.ui.start.createAccount.NewAccountFragment"
        tools:lable="New Account"
        tools:layout="@layout/fragment_new_account">

        <action
            android:id="@+id/action_new_account_to_chats"
            app:destination="@+id/nav_chats"
            app:launchSingleTop="true"
            app:popUpTo="@layout/fragment_start"/>
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.myapplication.ui.start.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_chats"
            app:destination="@+id/nav_chats"
            app:launchSingleTop="true"
            app:popUpTo="@layout/fragment_start"/>
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >

        <action
            android:id="@+id/action_settings_to_start"
            app:destination="@id/nav_start"
            app:popUpTo="@id/nav_start"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.myapplication.ui.chats.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats">

        <action
            android:id="@+id/action_chats_to_chat"
            app:destination="@id/nav_chat" />
        <action
            android:id="@+id/action_chats_to_users"
            app:destination="@+id/nav_users"/>
    </fragment>

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.myapplication.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.myapplication.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.myapplication.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_users_to_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>